RESOLVED FIXED219745
REGRESSION (r270574): [iOS] ASSERTION FAILED: !m_messageReceiverMapCount under WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager::~SpeechRecognitionRemoteRealtimeMediaSourceManager
https://bugs.webkit.org/show_bug.cgi?id=219745
Summary REGRESSION (r270574): [iOS] ASSERTION FAILED: !m_messageReceiverMapCount unde...
Ryan Haddad
Reported 2020-12-10 09:46:33 PST
fast/table/crash-splitColumn-3.html has become a flaky crash on iOS debug bots with the following assertion failure: ASSERTION FAILED: !m_messageReceiverMapCount /Volumes/Data/slave/ios-simulator-14-debug/build/Source/WebKit/Platform/IPC/MessageReceiver.h(40) : virtual IPC::MessageReceiver::~MessageReceiver() 1 0x104c64129 WTFCrash 2 0x10c7ae09b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10c7e99c8 IPC::MessageReceiver::~MessageReceiver() 4 0x10ceb88e3 WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager::~SpeechRecognitionRemoteRealtimeMediaSourceManager() 5 0x10ceb87f5 WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager::~SpeechRecognitionRemoteRealtimeMediaSourceManager() 6 0x10dba7d5b std::__1::default_delete<WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager>::operator()(WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager*) const 7 0x10dba7cdf std::__1::unique_ptr<WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager, std::__1::default_delete<WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager> >::reset(WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager*) 8 0x10dba7c79 std::__1::unique_ptr<WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager, std::__1::default_delete<WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager> >::~unique_ptr() 9 0x10db448f5 std::__1::unique_ptr<WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager, std::__1::default_delete<WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager> >::~unique_ptr() 10 0x10db441ee WebKit::WebProcessProxy::~WebProcessProxy() 11 0x10db44bb5 WebKit::WebProcessProxy::~WebProcessProxy() 12 0x10db44c3c WebKit::WebProcessProxy::~WebProcessProxy() 13 0x10d6c7f64 WTF::ThreadSafeRefCounted<WebKit::WebProcessProxy, (WTF::DestructionThread)0>::deref() const::'lambda'()::operator()() const 14 0x10d6c7efd WTF::ThreadSafeRefCounted<WebKit::WebProcessProxy, (WTF::DestructionThread)0>::deref() const 15 0x10d6c7eae WebKit::WebProcessProxy::deref() 16 0x10d6c7e7f WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy> >::~Ref() 17 0x10d69b0d5 WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy> >::~Ref() 18 0x10d9f671f WebKit::WebPageProxy::~WebPageProxy() 19 0x10d9f7b85 WebKit::WebPageProxy::~WebPageProxy() 20 0x10d23f184 -[WKObject dealloc] 21 0x102ea2834 objc_object::sidetable_release(bool, bool) 22 0x10d1e01bd API::Object::deref() const 23 0x10d597cf1 WTF::DefaultRefDerefTraits<WebKit::WebPageProxy>::derefIfNotNull(WebKit::WebPageProxy*) 24 0x10d597cb9 WTF::RefPtr<WebKit::WebPageProxy, WTF::RawPtrTraits<WebKit::WebPageProxy>, WTF::DefaultRefDerefTraits<WebKit::WebPageProxy> >::~RefPtr() 25 0x10d593ea5 WTF::RefPtr<WebKit::WebPageProxy, WTF::RawPtrTraits<WebKit::WebPageProxy>, WTF::DefaultRefDerefTraits<WebKit::WebPageProxy> >::~RefPtr() 26 0x10d6961fb -[WKWebView .cxx_destruct] 27 0x102e8a0f0 object_cxxDestructFromClass(objc_object*, objc_class*) 28 0x102e9bf11 objc_destructInstance 29 0x102ea1fb8 -[NSObject dealloc] 30 0x140ee59d5 -[UIResponder dealloc] 31 0x1413e38df -[UIView dealloc] https://results.webkit.org/?suite=layout-tests&test=fast%2Ftable%2Fcrash-splitColumn-3.html
Attachments
crash log (131.00 KB, text/plain)
2020-12-10 09:46 PST, Ryan Haddad
no flags
Patch (1.73 KB, patch)
2020-12-10 10:07 PST, Sihui Liu
ews-feeder: commit-queue-
Patch (1.77 KB, patch)
2020-12-10 10:34 PST, Sihui Liu
no flags
Ryan Haddad
Comment 1 2020-12-10 09:46:47 PST
Created attachment 415888 [details] crash log
Ryan Haddad
Comment 2 2020-12-10 09:47:17 PST
This appears to have started with https://trac.webkit.org/changeset/270574/webkit
Radar WebKit Bug Importer
Comment 3 2020-12-10 09:47:42 PST
Sihui Liu
Comment 4 2020-12-10 10:07:17 PST
Sihui Liu
Comment 5 2020-12-10 10:34:27 PST
EWS
Comment 6 2020-12-10 12:47:14 PST
Committed r270646: <https://trac.webkit.org/changeset/270646> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415898 [details].
Note You need to log in before you can comment on or make changes to this bug.