REGRESSION (r270574): [iOS] ASSERTION FAILED: !m_messageReceiverMapCount under WebKit::SpeechRecognitionRemoteRealtimeMediaSourceManager::~SpeechRecognitionRemoteRealtimeMediaSourceManager https://bugs.webkit.org/show_bug.cgi?id=219745 <rdar://problem/72184764>

Reviewed by Youenn Fablet.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::~WebProcessProxy): Remove SpeechRecognitionRemoteRealtimeMediaSourceManager from
MessageReceiverMap before destroying it.


Canonical link: https://commits.webkit.org/232313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270646 268f45cc-cd09-0410-ab3c-d52691b4dbfc